--- a/service/checkfood-service/src/main/resources/application.properties
+++ b/service/checkfood-service/src/main/resources/application.properties
@@ -1,5 +1,5 @@
 # Název aplikace
 spring.application.name=checkfood-service
 
-# Nastavení portu vestav?ného serveru Tomcat
+# Nastavení portu
 server.port=8081
