--- a/service/checkfood-service/src/main/resources/application.properties
+++ b/service/checkfood-service/src/main/resources/application.properties
@@ -1,5 +1,31 @@
-# Název aplikace
+# Application name
 spring.application.name=checkfood-service
 
-# Nastavení portu
+# Backend server port
 server.port=8081
+
+# ----------------------------------
+# PostgreSQL database configuration
+# ----------------------------------
+
+spring.datasource.url=jdbc:postgresql://34.31.118.199:5432/postgres
+spring.datasource.username=postgres
+spring.datasource.password=123heslo
+spring.datasource.driver-class-name=org.postgresql.Driver
+
+# ----------------------------------
+# JPA / Hibernate settings
+# ----------------------------------
+
+spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
+spring.jpa.hibernate.ddl-auto=update
+spring.jpa.show-sql=true
+spring.jpa.properties.hibernate.format_sql=true
+spring.jpa.open-in-view=false
+
+# ----------------------------------
+# Connection settings
+# ----------------------------------
+
+spring.datasource.hikari.connection-timeout=30000
+spring.datasource.hikari.maximum-pool-size=5
