--- a/service/checkfood-service/src/main/resources/application.properties
+++ b/service/checkfood-service/src/main/resources/application.properties
@@ -2,7 +2,7 @@
 spring.application.name=checkfood-service
 
 # Backend server port
-server.port=${SERVER_PORT}
+server.port=${SERVER_PORT:8080}
 
 # ----------------------------------
 # PostgreSQL database configuration
