fix: vyřešení konfliktu v local properties a aktualizace konfigurace

--- a/service/checkfood-service/.gitattributes
+++ b/service/checkfood-service/.gitattributes
@@ -1,2 +1,13 @@
+# Default: text files use LF
+* text=auto eol=lf
+
+# Maven wrapper
 /mvnw text eol=lf
+/mvnw.cmd text eol=crlf
+
+# Windows scripts
 *.cmd text eol=crlf
+*.bat text eol=crlf
+
+# Shell scripts
+*.sh text eol=lf
