--- a/service/checkfood-service/.gitignore
+++ b/service/checkfood-service/.gitignore
@@ -4,8 +4,9 @@ target/
 !**/src/main/**/target/
 !**/src/test/**/target/
 
-# Ignore local environment variables
+# Environment variables
 .env
+.env.*
 
 ### STS ###
 .apt_generated
